# agentmem

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  demo.py  pyproject.toml  requirements-local-cpu.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/agentmem/: __init__.py  __main__.py  config.py  consolidation.py  embeddings.py  llm.py  manager.py  short_term.py  types.py
src/agentmem/backends/: __init__.py  base.py  letta_backend.py  lightrag_backend.py  mem0_backend.py  router.py  vector.py
tests/: test_live.py  test_smoke.py
